fix: update z-index
(cherry picked from commit 799e22a6cf394b357926dbed65b1a7c983c6990e)

--- a/frappe/public/scss/desk/page.scss
+++ b/frappe/public/scss/desk/page.scss
@@ -84,7 +84,7 @@
 }
 
 .page-head {
-	z-index: 4;
+	z-index: 5;
 	position: sticky;
 	top: var(--navbar-height);
 	background: var(--bg-color);
